# haskell-parsing

./: .gitignore  README.md  errors  martin.hs  parens.hs  pear.cabal  pear.hs
app/: Main  Main.hs
examples/: example.pear
src/Pear/: ALexer.hs  APearser.hs  ASPearT.hs  AStack.hs  ATest.hs  Algebra.hs  Integer.hs  Lexer.hs  Operator.hs  Test.hs  Types.hs  bad.hs
src/Pear/Lexer/: Helper.hs
src/Pear/Operator/: ALexer.hs  APearser.hs  ASPearT.hs  AStack.hs  Algebra.hs  Bad.hs  Concrete.hs  Helper.hs  Integer.hs  Lexer.hs  Stack.hs  Test.hs  Tree.hs
test/: Spec.hs
