name:                pear
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/pear#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pear.Lexer
                     , Pear.Types 
                     , Pear.Operator
                     , Pear.Operator.Concrete
                     , Pear.Operator.Stack
                     , Pear.Operator.Algebra
                     , Pear.Operator.Tree
                     , Pear.Operator.Lexer
                     , Pear.Operator.Helper
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.2.1
                     , parsec
                     , mmorph
  default-language:    Haskell2010

executable pear
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , mtl >= 2.2.1
                     , pear
  default-language:    Haskell2010

test-suite pear-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parsec
                     , mtl >= 2.2.1
                     , pear
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pear
